manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: rahulltelkarnginxboard 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rahulltelkarnginxboard 
    spec:
      containers:
        - name: rahulltelkarnginxboard 
          image: rahulimageregistry.azurecr.io/rahulltelkarnginxboard
          ports:
          - containerPort: 8080
