manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rahul-service
spec:
  selector:
    app: rahulltelkarnginxboard
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
